# optics

./: .gitignore  .travis.yml  LensExperiment.hs  Makefile  README.md  cabal.codegen.project  cabal.haddockbundle.project  cabal.haskell-ci  cabal.project  cabal.project.local.head.hackage  doctest.sh  haddockbundle.sh  migration-guide-0.4.md
codegen/: Subtypes.hs  Topograph.hs  optics-codegen.cabal
generic-optics/: LICENSE  generic-optics.cabal
generic-optics-labels/: generic-optics-labels.cabal
generic-optics-labels/src/Optics/Label/: Generic.hs  Test.hs
generic-optics/src/Optics/: Labels.hs
generic-optics/src/Optics/Generic/Internal/: Utils.hs
generic-optics/src/Optics/Generic/Product/: Fields.hs
haddockbundle/: optics-haddockbundle.cabal
haddockbundle/src/: optics-haddockbundle.hs
indexed-profunctors/: CHANGELOG.md  indexed-profunctors.cabal
indexed-profunctors/src/Data/Profunctor/: Indexed.hs
metametapost/: .gitignore  LICENSE  Makefile  metametapost.cabal
metametapost/src/: Cli.hs  MetaMetaPost.hs
metametapost/src/MMP/Optics/: Common.hs  Hierarchy.hs  Indexed.hs  Re.hs
optics/: CHANGELOG.md  optics.cabal
optics-core/: CHANGELOG.md  optics-core.cabal
optics-core/src/: Optics.hs
optics-core/src/Data/: Optic.hs
optics-core/src/Data/Either/: Optics.hs
optics-core/src/Data/IntMap/: Optics.hs
optics-core/src/Data/IntSet/: Optics.hs
optics-core/src/Data/List/: Optics.hs
optics-core/src/Data/Map/: Optics.hs
optics-core/src/Data/Maybe/: Optics.hs
optics-core/src/Data/Sequence/: Optics.hs
optics-core/src/Data/Set/: Optics.hs
optics-core/src/Data/Tree/: Optics.hs
optics-core/src/Data/Tuple/: Optics.hs
optics-core/src/Data/Typeable/: Optics.hs
optics-core/src/GHC/Generics/: Optics.hs
optics-core/src/Language/Haskell/TH/: Optics.hs
optics-core/src/Numeric/: Optics.hs
optics-core/src/Optics/: AffineFold.hs  AffineTraversal.hs  Arrow.hs  Coerce.hs  Core.hs  Each.hs  Equality.hs  Fold.hs  Fold1.hs  Generic.hs  Getter.hs  Getting.hs  Indexed.hs  Internal.hs  Iso.hs  IxAffineFold.hs  IxAffineTraversal.hs  IxFold.hs  IxGetter.hs  IxLens.hs  IxNeFold.hs  IxSetter.hs  IxTraversal.hs  Label.hs  Lens.hs  LensyReview.hs  Mapping.hs  Monoidal.hs  NeFold.hs  Operators.hs  Optic.hs  Passthrough.hs  Plated.hs  Prism.hs  PrismaticGetter.hs  Re.hs  ReadOnly.hs  ReversedLens.hs  ReversedPrism.hs  Review.hs  (+5 more)
optics-core/src/Optics/At/: Core.hs
optics-core/src/Optics/Cons/: Core.hs
optics-core/src/Optics/Core/: Extras.hs
optics-core/src/Optics/Each/: Core.hs
optics-core/src/Optics/Empty/: Core.hs
optics-core/src/Optics/Generic/: Labels.hs
optics-core/src/Optics/Generic/Product/: Fields.hs  Positions.hs
optics-core/src/Optics/Generic/Sum/: Constructors.hs
optics-core/src/Optics/Indexed/: Core.hs
optics-core/src/Optics/Internal/: AffineFold.hs  AffineTraversal.hs  Bi.hs  Bicontravariant.hs  Concrete.hs  Equality.hs  Fold.hs  Forget.hs  Generic.hs  Getter.hs  Getting.hs  Indexed.hs  Iso.hs  IxFold.hs  IxSetter.hs  IxTraversal.hs  Lens.hs  Magic.hs  Optic.hs  OpticKind.hs  Passthrough.hs  Pointed.hs  Prism.hs  Profunctor.hs  Re.hs  Review.hs  Setter.hs  Subtyping.hs  Tagged.hs  Traversal.hs  TypeError.hs  Utils.hs  View.hs
optics-core/src/Optics/Internal/Generic/: Errors.hs  Families.hs  TypeLevel.hs  Utils.hs  Void.hs
optics-core/src/Optics/Internal/Generic/Families/: Changing.hs  Collect.hs  Has.hs
optics-core/src/Optics/Internal/Generic/Product/: GLens.hs  HList.hs  Positions.hs
optics-core/src/Optics/Internal/Generic/Sum/: Constructors.hs
optics-core/src/Optics/Internal/Indexed/: Classes.hs
optics-core/src/Optics/Internal/Optic/: Subtyping.hs  TypeLevel.hs  Types.hs
optics-core/src/Optics/Operators/: State.hs  Unsafe.hs
optics-core/tests/Optics/: Tests.hs
optics-extra/: CHANGELOG.md  optics-extra.cabal
optics-extra/src/Control/Parallel/Strategies/: Optics.hs
optics-extra/src/Data/ByteString/: Optics.hs
optics-extra/src/Data/ByteString/Lazy/: Optics.hs
optics-extra/src/Data/ByteString/Strict/: Optics.hs
optics-extra/src/Data/HashMap/: Optics.hs
optics-extra/src/Data/HashSet/: Optics.hs
optics-extra/src/Data/Set/: Optics.hs
optics-extra/src/Data/Text/: Optics.hs
optics-extra/src/Data/Text/Lazy/: Optics.hs
optics-extra/src/Data/Text/Strict/: Optics.hs
optics-extra/src/Data/Vector/: Optics.hs
optics-extra/src/Data/Vector/Generic/: Optics.hs
optics-extra/src/GHC/Generics/: Optics.hs
optics-extra/src/Optics/: At.hs  Cons.hs  Each.hs  Empty.hs  Extra.hs  Indexed.hs  Passthrough.hs  State.hs  View.hs  Zoom.hs
optics-extra/src/Optics/Extra/: Internal.hs
optics-extra/src/Optics/Extra/Internal/: ByteString.hs  Vector.hs  Zoom.hs
optics-extra/src/Optics/Operators/: State.hs
optics-extra/src/Optics/State/: Operators.hs
optics-sop/: optics-sop.cabal
optics-sop/src/Generics/SOP/: Optics.hs
optics-sop/src/Optics/: SOP.hs
optics-sop/src/Optics/SOP/: ToTuple.hs
optics-th/: CHANGELOG.md  optics-th.cabal
optics-th/src/Language/Haskell/TH/: Optics.hs
optics-th/src/Language/Haskell/TH/Optics/: Internal.hs
optics-th/src/Optics/: TH.hs  ThTest.hs
optics-th/src/Optics/Internal/: FieldTH.hs  PrismTH.hs  TH.hs
optics-th/src/Optics/TH/Internal/: Product.hs  Sum.hs  Utils.hs
optics-th/tests/Optics/TH/: Tests.hs
optics-th/tests/Optics/TH/Tests/: DuplicateRecordFields.hs  T799.hs
optics-vl/: CHANGELOG.md  LICENSE  optics-vl.cabal
optics-vl/src/Optics/: VL.hs
optics/benchmarks/: folds.hs  traversals.hs
optics/src/: Optics.hs
optics/src/Data/Data/: Optics.hs
optics/src/Data/Set/: Optics.hs
optics/src/Data/Tuple/: Optics.hs
optics/src/GHC/Generics/: Optics.hs
optics/src/Optics/: Each.hs
optics/src/Optics/Operators/: Compat.hs  State.hs
optics/tests/Optics/: Tests.hs
optics/tests/Optics/Tests/: Computation.hs  Core.hs  Eta.hs  Labels.hs  Misc.hs  Properties.hs  Utils.hs
optics/tests/Optics/Tests/Labels/: Generic.hs  TH.hs
template-haskell-optics/: CHANGELOG.md  template-haskell-optics.cabal
template-haskell-optics/src/Language/Haskell/TH/: Optics.hs
(+7 files in other folders)
