cabal-version: 1.24
name:          generic-optics
version:       0.1
license:       BSD3
license-file:  LICENSE
build-type:    Simple
maintainer:    oleg@well-typed.com
author:        Oleg Grenrus
tested-with:   ghc ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.3
synopsis:      Optics using generics-lens
category:      Data, Optics, Lenses, Generics
description:
  Construct optics generically, using
  <http://hackage.haskell.org/package/generic-lens generics-lens> machinery.

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
      base          >=4.9 && <5
    , generic-lens  >=1.1 && <1.2
    , optics-core   >=0.1 && <1

  exposed-modules:
    Optics.Generic.Product.Fields
    Optics.Labels
