cabal-version: 1.24
name:          generic-optics
version:       0.1
build-type:    Simple

tested-with: GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.3

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
      base          >=4.9 && <5
    , generic-lens  >=1.1 && <1.2
    , optics-core   >=0.1 && <1

  exposed-modules:
    Optics.Generic.Product.Fields
    Optics.Labels
