name:          generic-optics
version:       0.1
license:       BSD3
license-file:  LICENSE
build-type:    Simple
cabal-version: 1.24
maintainer:    optics@well-typed.com
author:        Oleg Grenrus
tested-with:   ghc ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.1, GHCJS ==8.4
synopsis:      Optics using generics-lens
category:      Data, Optics, Lenses, Generics
description:
  Construct optics generically, using
  <http://hackage.haskell.org/package/generic-lens generics-lens> machinery.

bug-reports:   https://github.com/well-typed/optics/issues
source-repository head
  type:     git
  location: https://github.com/well-typed/optics.git
  subdir:   generic-optics

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall

  build-depends:    base                   >= 4.9        && <5
                  , generic-lens           >= 1.1        && <1.3
                  , optics-core            >= 0.1        && <0.2
                  , profunctors            >= 5.0        && <6.0

  exposed-modules: Optics.Generic.Product.Fields
