cabal-version: 3.0
name:          indexed-profunctors
version:       0.1.2.0
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple
maintainer:    optics@well-typed.com
author:        Adam Gundry, Andres Löh, Andrzej Rybczak, Oleg Grenrus
tested-with:   GHC == { 9.2.8, 9.4.8, 9.6.7, 9.8.4, 9.10.3, 9.12.4, 9.14.1 }
synopsis:      Utilities for indexed profunctors
category:      Data, Optics, Lenses, Profunctors
description:
  This package contains basic definitions related to indexed profunctors.  These
  are primarily intended as internal utilities to support the @optics@ and
  @generic-lens@ package families.

extra-doc-files:
  CHANGELOG.md

bug-reports:   https://github.com/well-typed/optics/issues
source-repository head
  type:     git
  location: https://github.com/well-typed/optics.git
  subdir:   indexed-profunctors

common language
    ghc-options:        -Wall -Wcompat

    default-language:   Haskell2010

    default-extensions: BangPatterns
                        ConstraintKinds
                        DefaultSignatures
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        EmptyCase
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        OverloadedLabels
                        PatternSynonyms
                        RankNTypes
                        ScopedTypeVariables
                        TupleSections
                        TypeApplications
                        TypeFamilies
                        TypeOperators
                        ViewPatterns

library
  import:           language
  hs-source-dirs:   src

  build-depends: base                   >= 4.16       && <5

  exposed-modules:    Data.Profunctor.Indexed
