cabal-version: 1.24
name:          metametapost
version:       0.1
license:       BSD3
license-file:  LICENSE
build-type:    Simple
tested-with:   ghc ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.2
maintainer:    oleg@well-typed.com
synopsis:      Generate optics documentation diagrams
category:      Optics, Examples
description:
  This is a an example using @optics@, with a practical
  benefit of generating diagrams used in the documentation.

executable metametapost-optics
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall

  build-depends: base                   >=4.10        && <5
               , base-compat            >=0.11.1      && <0.12
               , containers
               , generics-sop
               , mtl
               , optics
               , optics-sop

  main-is: Cli.hs

  other-modules: MetaMetaPost
                 MMP.Optics.Common
                 MMP.Optics.Hierarchy
                 MMP.Optics.Indexed
                 MMP.Optics.Re
