cabal-version: 2.2
name:          metametapost
version:       0.1
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple
tested-with:   GHC ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.7
                || ==9.0.2 || ==9.2.6 || ==9.4.4 || ==9.6.1, GHCJS ==8.4
maintainer:    oleg@well-typed.com
synopsis:      Generate optics documentation diagrams
category:      Optics, Examples
description:
  This is a an example using @optics@, with a practical
  benefit of generating diagrams used in the documentation.

common language
    ghc-options:        -Wall -Wcompat

    default-language:   Haskell2010

    default-extensions: BangPatterns
                        ConstraintKinds
                        DefaultSignatures
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        EmptyCase
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        OverloadedLabels
                        PatternSynonyms
                        RankNTypes
                        ScopedTypeVariables
                        TupleSections
                        TypeApplications
                        TypeFamilies
                        TypeOperators
                        ViewPatterns

executable metametapost-optics
  import:           language
  hs-source-dirs:   src

  build-depends: base                   >=4.10        && <5
               , base-compat            >=0.11.1      && <0.13
               , containers
               , generics-sop
               , mtl
               , optics
               , optics-sop

  main-is: Cli.hs

  other-modules: MetaMetaPost
                 MMP.Optics.Common
                 MMP.Optics.Hierarchy
                 MMP.Optics.Indexed
                 MMP.Optics.Re
