name:          optics-extra
version:       0.1
license:       BSD3
license-file:  LICENSE
build-type:    Simple
cabal-version: 1.24
maintainer:    oleg@well-typed.com
author:        Edward Kmett, Andrzej Rybczak
tested-with:   ghc ==8.0.2 ghc ==8.2.2 ghc ==8.4.4 ghc ==8.6.3
synopsis:      Extra utilities and instances for optics-core
category:      Data, Optics, Lenses, Generics
description:
  This package provides extra definitions and instances that extend @optics-core@ package.

library
  default-language:   Haskell2010
  hs-source-dirs:     src

  build-depends: optics-core            >= 0.1       && <1.0
               , array                  >= 0.5.1.1   && <0.6
               , base                   >= 4.9       && <5
               , bytestring             >= 0.10.8    && <0.11
               , containers             >= 0.5.7.1   && <0.7
               , mtl                    >= 2.2.2     && <2.3
               , text                   >= 1.2       && <1.3
               , transformers           >= 0.5       && <0.6
               , unordered-containers   >= 0.2.6     && <0.3
               , vector                 >= 0.11      && <0.13

  ghc-options:        -Wall

  -- main module to land with repl
  exposed-modules: Optics.Extra


  exposed-modules: Optics.Extra.Internal.ByteString
                   Optics.Extra.Internal.Vector
                   Data.ByteString.Lazy.Optics
                   Data.ByteString.Optics
                   Data.ByteString.Strict.Optics
                   Data.Set.Optics
                   Data.Text.Lazy.Optics
                   Data.Text.Optics
                   Data.Text.Strict.Optics
                   Data.Vector.Generic.Optics
                   Data.Vector.Optics
                   GHC.Generics.Optics
                   Optics.Each
                   Optics.Indexed
                   Optics.Operators.State

  default-extensions:
    BangPatterns
    DefaultSignatures
    DeriveFunctor
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    RankNTypes
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
