name:          optics-sop
version:       0.1
license:       BSD3
license-file:  LICENSE
build-type:    Simple
maintainer:    optics@well-typed.com
author:        Adam Gundry, Andres Löh, Andrzej Rybczak
cabal-version: >=1.10
tested-with:   ghc ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.1 || ==8.10.1, GHCJS ==8.4
synopsis:      Optics for generics-sop, and using generics-sop
category:      Data, Optics, Lenses, Generics
description:
  This package provides:
  .
  * optics to work with @generics-sop@ (or @sop-core@) types,
  .
  * machinery to construct optics using @generics-sop@.

bug-reports:   https://github.com/well-typed/optics/issues
source-repository head
  type:     git
  location: https://github.com/well-typed/optics.git
  subdir:   optics-sop

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall

  build-depends: base          >=4.9     && <5
               , generics-sop  >=0.3.1.0 && <0.6
               , optics-core   >=0.2     && <0.3

  exposed-modules: Optics.SOP
                   Optics.SOP.ToTuple
                   Generics.SOP.Optics
